kubernetes/contour/deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: chip

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: chip
  namespace: chip
  labels:
    name: chip
spec:
  replicas: 3
  selector:
    matchLabels:
      name: chip
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        name: chip
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: msfidelis/chip:v1
        name: chip
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 8080        
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: "256m"
            memory: "512m"

---
kind: Service
apiVersion: v1
metadata:
  name: chip
  namespace: chip
spec:
  selector:
    name: chip
  ports:
    - protocol: TCP
      port: 8080
      name: web
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chip
  namespace: chip
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: chip
    hosts:
    - chip.raj.ninja
  rules:
  - http:
      paths:
      - backend:
          serviceName: chip
          servicePort: 8080
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: chip
  namespace: chip
spec:
  virtualhost:
    fqdn: chip.raj.ninja
    tls:
      secretName: chip
  routes:
  - services:
    - name: chip
      port: 8080
